# rapidografo

./: PKG-INFO  README.md  SOURCES.txt  rapidografo-0.0.1-py3-none-any.whl  rapidografo.py  setup.cfg
src/: rapidografo.py
src/rapidografo.egg-info/: SOURCES.txt
