[metadata]
name = rapidografo
version = 0.0.1
url = https://github.com/Sam170822/rapidografo
author = Samuel Rodriguez
author_email = "Samuel Rodriguez" samualego.15@gmail.coom
description = This package graphs numpy arrays in a 2D space
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src